# geonss

./: .gitignore  .pylintrc  LICENCE  README.md  flake.nix  pyproject.toml  requirements.txt
.github/workflows/: pytest-pylint.yml  pytest.yml
hooks/: pre-commit
notebooks/: satellite_positions.ipynb
src/geonss/: __init__.py  algorithms.py  constants.py  constellation.py  coordinates.py  correction.py  interpolation.py  main.py  measurements.py  navigation.py  position.py  ranges.py  single_point_position.py  sp3.py  time.py  util.py
src/geonss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/geonss/parsing/: __init__.py  antex.py  cache.py  download.py  parallel.py  util.py  write.py
src/geonss/plotting/: __init__.py  altitude.py  distance.py  ecef.py  latlon.py  spacial_plot.py
src/geonss/rinexmanager/: antex.py  util.py
tests/: test_cli_program.py  test_coordinates.py  test_correction.py  test_interpolation.py  test_main.py  test_satellite_position.py  test_solve_position.py  test_util.py  util.py
tests/data/: COD0OPSRAP_20240010000_01D_05M_ORB.SP3  COD0OPSRAP_20250980000_01D_05M_ORB.SP3  GEOP057V.25o  GEOP085R.25o  GEOP091P.25o  S6ATUM_22951.sp3  WTZR00DEU_20250226_navigation.rnx  WTZR00DEU_20250326_navigation.rnx  WTZR00DEU_R_20250980000_01D_MN.rnx
