[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]
name = "geonss"
version = "0.1.0"
description = "GNSS positioning tools"
requires-python = ">=3.8"
dependencies = [
    "georinex @ git+https://github.com/Parrot7483/georinex@develop",
    "hatanaka @ git+https://github.com/valgur/hatanaka@master",
    "matplotlib==3.10.1",
    "multipledispatch",
    "numpy==2.2.4",
    "paramiko==3.5.1",
    "platformdirs",
    "scipy==1.15.2",
    "xarray==2025.1.2",
	"midgard==1.3.0",
	"colorama==0.4.6",
	"pint==0.25",
]

[project.optional-dependencies]
dev = [
    "autopep8==2.3.2",
    "pytest==8.4.2",
]

[project.scripts]
geonss = "geonss.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["geonss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
pythonpath = [".", "src"]

[tool.pylint]
max-line-length = 120
disable = [
    "raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero"
]
